--- a/app.json
+++ b/app.json
@@ -1,9 +1,7 @@
 {
   "name": "jqplay",
-  "scripts": {
-  },
-  "env": {
-  },
+  "scripts": {},
+  "env": {},
   "formation": {
     "web": {
       "quantity": 1
@@ -15,7 +13,5 @@
     "ssl",
     "papertrail"
   ],
-  "buildpacks": [
-
-  ]
+  "buildpacks": []
 }
